test/sematic/resources/positive/basic_vardec2.tig
let 
    type a = int
    var v1 := 1
    var v2 : a := 1
in
    v1 + v2
end