test/sematic/resources/negative/false_loop.tig
let
in
    for i := 1 to "string" do i
end